[project]
name = "no-title"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-aws>=1.5.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
